# schedule-to-cal

./: .gitignore  README.md  main.py  notion.py  pyproject.toml
.github/workflows/: update.yml
